<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/common.bold.red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backup" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backup"
        android:text="@string/backup_DB" />

    <TextView
        android:id="@+id/textView2"
        style="@style/common.bold.red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="restore"
        android:text="@string/restore_DB" />

</LinearLayout>