<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_no" />

        <EditText
            android:id="@+id/editVehicleNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <requestFocus />
        </EditText>
        </LinearLayout>
        

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textDetails"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_details" />
        <EditText
            android:id="@+id/editVehicleDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textCapWords" >
        </EditText>
        </LinearLayout>

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textValue"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_value" />

        <EditText
            android:id="@+id/editVehicleValue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number">
        </EditText>
        </LinearLayout>
        
           <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textPolicyno"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Policy Number " />

        <EditText
            android:id="@+id/editPolicyNo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" >
        </EditText>
        
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
            android:id="@+id/textStartdate"
            android:layout_height="wrap_content"
            android:layout_width="120dp"
            android:text="Start Date  " />
            
            <EditText
                android:id="@+id/editStartDate"
                android:layout_width="150dp"
                android:layout_height="wrap_content">
            </EditText>

            <ImageButton
                android:id="@+id/buttonDateDialog"
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:onClick="showStartDateDialog"
                android:src="@drawable/data" android:contentDescription="Date  Picker">
            </ImageButton>
        </LinearLayout>
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
           <TextView
            android:id="@+id/textEnddate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/end_date" />
                        
            <EditText
                android:id="@+id/editEndDate"
                android:layout_width="150dp"
                android:layout_height="wrap_content">
            </EditText>

            <ImageButton
                android:id="@+id/buttonEndDateDialog"
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:onClick="showEndDateDialog"
                android:src="@drawable/data">
            </ImageButton>
        </LinearLayout>
        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            

        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/insurance_amount" />


        <EditText
            android:id="@+id/editAmount"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number" >

        </EditText>

        </LinearLayout>

              <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        
         <TextView
            android:id="@+id/textCompany"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/company" />


        <EditText
            android:id="@+id/editCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textCapCharacters|textCapWords" >

        </EditText>
         </LinearLayout>
        
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="add"
            android:text="Add"></Button>
    </LinearLayout>

</ScrollView>